# atm10-projects

./: .gitignore  CODE_CHANGES.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/api/: fetchUrl.ts  modpack.ts
src/components/: HomeInfo.tsx  HowItWorks.tsx  ModDetail.tsx  RuntimeStatus.tsx  Search.tsx
src/pages/: Home.tsx  ModPage.tsx
src/types/: shims.d.ts
